// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Home > renders Level links 1`] = `
<div>
  <div
    class="sc-dmyCSP kZdrqq"
  >
    <a
      class="sc-beySPh hxwsoU"
      href="/level/1/details"
    >
      <img
        src="/level1"
      />
      <h2
        class="sc-guDLey hPdRwR"
      >
        LEVEL 
        1
      </h2>
    </a>
    <a
      class="sc-beySPh hxwsoU"
      href="/level/2/details"
    >
      <img
        src="/level2"
      />
      <h2
        class="sc-guDLey hPdRwR"
      >
        LEVEL 
        2
      </h2>
    </a>
  </div>
</div>
`;

exports[`Home > renders error message on useFetch error 1`] = `
<div>
  <p>
    Error fetching level data.
  </p>
</div>
`;

exports[`Home > renders loading message on useFetch loading 1`] = `
<div>
  <p>
    Loading...
  </p>
</div>
`;
